Rutinas Visibles para los clientes ya estan listas